force-app/main/default/objects/Apex_Demo_Setting__mdt/Apex_Demo_Setting__mdt.object-meta.xml
<CustomObject>
    <description>Configurable DEMO thresholds for the Apex Person 2 build. Every value is marked DEMO / TO VALIDATE with Apex.</description>
    <label>Apex Demo Setting</label>
    <pluralLabel>Apex Demo Settings</pluralLabel>
</CustomObject>