force-app/main/default/objects/Apex_Demo_Setting__mdt/fields/Default_Close_Days__c.field-meta.xml
<CustomField>
    <fullName>Default_Close_Days__c</fullName>
    <description>DEMO / TO VALIDATE. Used only to default the Close Date of an opportunity created from a sample request.</description>
    <label>Default Opportunity Close Days (DEMO)</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>