force-app/main/default/objects/Apex_Demo_Setting__mdt/fields/Default_Reorder_Interval_Days__c.field-meta.xml
<CustomField>
    <fullName>Default_Reorder_Interval_Days__c</fullName>
    <label>Default Reorder Interval Days</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>