force-app/main/default/objects/Apex_Demo_Setting__mdt/fields/Discount_Threshold_Percent__c.field-meta.xml
<CustomField>
    <fullName>Discount_Threshold_Percent__c</fullName>
    <description>DEMO / TO VALIDATE. Quotes with a discount above this percentage are routed for approval.</description>
    <label>Discount Threshold % (DEMO)</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>