force-app/main/default/objects/Apex_Demo_Setting__mdt/fields/Feedback_Follow_Up_Days__c.field-meta.xml
<CustomField>
    <fullName>Feedback_Follow_Up_Days__c</fullName>
    <label>Sample Feedback Follow-up Days</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>