force-app/main/default/objects/Apex_Demo_Setting__mdt/fields/Management_Approver_Username__c.field-meta.xml
<CustomField>
    <fullName>Management_Approver_Username__c</fullName>
    <description>Username of the Management approver for quotes. Blank = fall back to the owner's manager chain.</description>
    <label>Management Approver Username</label>
    <length>255</length>
    <type>Text</type>
</CustomField>