force-app/main/default/objects/Apex_Demo_Setting__mdt/fields/Reorder_Lead_Days__c.field-meta.xml
<CustomField>
    <fullName>Reorder_Lead_Days__c</fullName>
    <label>Reorder Follow-up Lead Days</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>