force-app/main/default/objects/Apex_Demo_Setting__mdt/fields/Sample_Approval_Quantity_Limit_KG__c.field-meta.xml
<CustomField>
    <fullName>Sample_Approval_Quantity_Limit_KG__c</fullName>
    <description>DEMO / TO VALIDATE. New sample requests above this quantity go to Approval Pending.</description>
    <label>Sample Approval Quantity Limit (KG)</label>
    <precision>10</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>