force-app/main/default/objects/Apex_Demo_Setting__mdt/fields/Stale_Opportunity_Days__c.field-meta.xml
<CustomField>
    <fullName>Stale_Opportunity_Days__c</fullName>
    <label>Stale Opportunity Days</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>